--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,39 +13,38 @@ build:
   number: 0
   entry_points:
     - sentinelhub=sentinelhub.commands:main_help
-    - sentinelhub.aws=sentinelhub.commands:aws
+    - sentinelhub.aws=sentinelhub.aws.commands:aws
     - sentinelhub.config=sentinelhub.commands:config
     - sentinelhub.download=sentinelhub.commands:download
   script: {{ PYTHON }} -m pip install . -vv
 requirements:
   host:
     - pip
-    - python >=3.5
+    - python >=3.7
 
   run:
     - aenum >=2.1.4
-    - attrs >=18.2.0
     - boto3
     - botocore
     - click
     - numpy
     - oauthlib
     - pillow
-    - pyproj
-    - python >=3.5
+    - pyproj >=2.2.0
+    - python >=3.7
     - python-dateutil
-    - requests
+    - requests >=2.5.0
     - requests-oauthlib
     - shapely
-    - tifffile
+    - tifffile >=2020.9.30
     - tqdm
     - utm
-    - wheel
     - dataclasses-json
 
 test:
   imports:
     - sentinelhub
+    - sentinelhub.aws
     - sentinelhub.download
   commands:
     - sentinelhub --help
