--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,8 @@ requirements:
   host:
     - pip
     - python >=3.7
-
   run:
+    - python >=3.7
     - aenum >=2.1.4
     - boto3
     - botocore
@@ -36,10 +36,10 @@ requirements:
     - requests >=2.27.0
     - requests-oauthlib >=1.0.0
     - shapely
-    - shared-memory38;python_version <"3.8"
+    - shared-memory38
     - tifffile >=2020.9.30
     - tqdm
-    - typing-extensions;python_version <"3.11"
+    - typing-extensions
     - utm
     - dataclasses-json
 
