--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,7 @@ requirements:
     - oauthlib
     - pillow >=9.2.0
     - pyproj >=2.2.0
+    - python >=3.8
     - python-dateutil
     - requests >=2.27.0
     - requests-oauthlib >=1.0.0
